--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PAM_Tugas2</string>
     <string name="home">Home</string>
     <string name="player">Player</string>
+    <string name="now_playing">NOW PLAYING</string>
+    <string name="next_song">NEXT SONG</string>
 </resources>
