Add prev song to show in player, ic to collapse and expand for the queue, change SongplayerActivity layout a bit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="player">Player</string>
     <string name="now_playing">NOW PLAYING</string>
     <string name="next_song">NEXT SONG</string>
+    <string name="prev_song">PREV SONG</string>
 </resources>
